--- a/src/components/LogIn/LogIn.css
+++ b/src/components/LogIn/LogIn.css
@@ -23,10 +23,12 @@ body {
 }
 
 .joinInnerContainer {
-  width: 20%;
+  width: 30%;
+  margin: 36px auto;
 }
 
 .joinInput {
+  display: block;
   border-radius: 0;
   padding: 15px 20px;
   width: 100%;
@@ -59,11 +61,6 @@ body {
   margin-top: 2px;
   margin-left: 5px;
 }
-.Validator {
-  font-size: 10px;
-  color: white;
-  text-align: left;
-}
 
 @media (min-width: 320px) and (max-width: 480px) {
   .joinOuterContainer {
@@ -77,4 +74,31 @@ body {
 
 button:focus {
   outline: 0;
+}
+
+.some-form__hint {
+  z-index: auto;
+  opacity: 1;
+  position: absolute;
+  left: 0;
+  margin-top: -6px;
+  padding: 0 12px;
+  width: 100%;
+  background: #f45a57;
+  color: #fff;
+  font-size: 12px;
+  line-height: 1.333333;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.some-form__line {
+  display: block;
+  position: relative;
+  margin-bottom: 15px;
+}
+
+.some-form {
+  width: 30%;
+  margin: 36px auto;
 }
