--- a/src/components/LogIn/LogIn.css
+++ b/src/components/LogIn/LogIn.css
@@ -28,9 +28,23 @@ body {
 
 .joinInput {
   display: block;
-  border-radius: 0;
+  outline: 0;
   padding: 15px 20px;
   width: 100%;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.joinInput:hover {
+  border-color: #66afe9;
+  box-shadow: inset 0 0.5px 10.5px rgba(0, 0, 0, 0.075),
+    0 0 4px rgba(102, 175, 233, 0.6);
+}
+
+.joinInput:focus {
+  border-color: #66afe9;
+  box-shadow: inset 0 0.5px 10.5px rgba(0, 0, 0, 0.075),
+    0 0 8px rgba(102, 175, 233, 0.6);
 }
 
 .heading {
@@ -76,8 +90,6 @@ button:focus {
 }
 
 .some-form__hint {
-  z-index: auto;
-  opacity: 1;
   position: absolute;
   left: 0;
   margin-top: -6px;
@@ -92,6 +104,7 @@ button:focus {
 }
 
 .some-form__line {
+  border-radius: 0px;
   display: block;
   position: relative;
   margin-bottom: 15px;
