--- a/src/components/LogIn_SignUp/LogIn/LogIn.css
+++ b/src/components/LogIn_SignUp/LogIn/LogIn.css
@@ -1,4 +1,5 @@
-/*TODO Провести рефакторинг! */
+/* TODO Провести рефакторинг! */
+/* TODO Сделать эффект Error ярче */
 
 .joinInput {
   color: #1b1b1b;
