--- a/src/components/LogIn_SignUp/LogIn/LogIn.css
+++ b/src/components/LogIn_SignUp/LogIn/LogIn.css
@@ -3,6 +3,8 @@
 
 .joinInput {
   color: #1b1b1b;
+  background-color: #c4c4c4;
+
   font-size: 30px;
   display: block;
   outline: 0;
@@ -26,6 +28,7 @@
 
 .joinInput_error {
   color: #1b1b1b;
+  background-color: #c4c4c4;
 
   font-size: 30px;
   display: block;
@@ -66,7 +69,7 @@
   text-transform: uppercase;
   text-decoration: none;
   padding: 15px 20px;
-  background: #de2424;
+  background: #b92020;
   border-radius: 0 5px 0 5px;
   display: inline-block;
   border: none;
