--- a/src/components/LogIn_SignUp/LogIn_SignUp__Frames.css
+++ b/src/components/LogIn_SignUp/LogIn_SignUp__Frames.css
@@ -23,12 +23,13 @@ body {
 }
 
 .joinInnerContainer {
-  width: 500px;
-  height: 550px;
+  margin: 15% 5% 0 5%;
+  height: 100vh;
+  overflow: hidden;
+  align-items: center;
 }
 
 .LogIn {
-  width: 430px;
   height: 375px;
   transition: opacity 0.5s ease, transform 0.5s ease,
     -webkit-transform 0.5s ease;
@@ -40,7 +41,6 @@ body {
 }
 
 .SignUp {
-  width: 430px;
   height: 375px;
   position: relative;
   top: -375px;
