--- a/src/components/Characters/Characters.css
+++ b/src/components/Characters/Characters.css
@@ -4,6 +4,7 @@ body {
   font-style: normal;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 #root {
@@ -23,25 +24,29 @@ body {
 }
 
 .charactersInnerContainer {
-  padding: 10% 5% 0 5%;
-  height: 100vh;
-  overflow: hidden;
+  padding: 150px 5% 0 5%;
+  height: 100%;
+  width: 60vw;
+
   align-items: center;
 }
 
 .Characters_create {
-  /* position: relative; */
   margin: auto;
   margin-bottom: 40px;
+
+  width: 70%;
 }
 
 .Character_createContainer {
   display: flex;
   justify-content: center;
+  z-index: 3;
 }
 
 .Characters_createBtn {
-  padding: 0 15px;
+  padding: 0 10px;
+  width: 100%;
   z-index: 1;
 
   background: #b92020;
@@ -56,35 +61,35 @@ body {
 }
 
 .Character_Btn {
-  display: block;
   position: absolute;
-  top: 147px;
-  left: 125px;
-
+  width: 60vw;
   height: 75px;
+  cursor: pointer;
+  z-index: 3;
 }
 
 .Characters_Dragon {
   position: absolute;
   z-index: 2;
-  /* top: -150%; */
-  /* left: 78%; */
 
-  width: 25%;
+  top: 3%;
+  width: 250px;
 }
 
 .Characters_DragonTail {
   position: absolute;
+  top: 10%;
+  left: 65%;
 
-  top: 5%;
-
-  /* left: 78%; */
-  width: 35%;
+  width: 350px;
 }
 
 .Characters {
+  width: 70%;
+  margin: auto;
   height: 370px;
   overflow: auto;
+
   flex: auto;
 }
 
@@ -103,4 +108,70 @@ body {
   border-radius: 10px;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #555;
+}
+
+@media (max-width: 1440px) {
+  .charactersInnerContainer {
+    width: 70vw;
+  }
+  .Character_Btn {
+    width: 70vw;
+  }
+}
+
+@media (max-width: 1150px) {
+  .charactersInnerContainer {
+    width: 80vw;
+  }
+  .Character_Btn {
+    width: 80vw;
+  }
+}
+
+@media (max-width: 1000px) {
+  .charactersInnerContainer {
+    width: 90vw;
+  }
+  .Character_Btn {
+    width: 90vw;
+  }
+}
+
+@media (max-width: 850px) {
+  .Characters_createBtn {
+    font-size: 35px;
+  }
+}
+
+@media (max-width: 750px) {
+  .Characters_create {
+    width: 90%;
+  }
+  .Characters {
+    width: 90%;
+  }
+
+  .Characters_DragonTail {
+    width: 0px;
+  }
+
+  .Characters_createBtn {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 640px) {
+  .charactersInnerContainer {
+    width: 100vw;
+  }
+  .Characters_create {
+    width: 100%;
+  }
+  .Characters {
+    width: 100%;
+  }
+
+  .Characters_createBtn {
+    font-size: 25px;
+  }
 }
