--- a/src/components/Characters/Characters.scss
+++ b/src/components/Characters/Characters.scss
@@ -44,7 +44,15 @@ body {
   z-index: 3;
 }
 
+.Character_createContainer:hover {
+  .Characters_createBtn {
+    background: #b81717;
+    box-shadow: 0 0 25px #b92020;
+  }
+}
+
 .Characters_createBtn {
+  transition: 0.5s ease;
   padding: 0 10px;
   width: 100%;
   z-index: 1;
@@ -74,6 +82,9 @@ body {
 
   top: 3%;
   width: 250px;
+  .cls-1 {
+    fill: white;
+  }
 }
 
 .Characters_DragonTail {
@@ -82,6 +93,9 @@ body {
   left: 62%;
 
   width: 350px;
+  .cls-1 {
+    fill: white;
+  }
 }
 
 .Characters {
