--- a/src/components/Characters/Characters.scss
+++ b/src/components/Characters/Characters.scss
@@ -1,9 +1,5 @@
 html,
 body {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
-  padding: 0;
-  margin: 0;
   overflow: hidden;
 }
 
@@ -11,14 +7,10 @@ body {
   height: 100vh;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 .charactersOuterContainer {
   display: flex;
   height: 100vh;
-  width: 100%;
+  width: 100vw;
   background-color: #19191a;
   justify-content: center;
 }
