redisign LOGOUT_btn

--- a/src/components/Characters/Creating/Name/Name.scss
+++ b/src/components/Characters/Creating/Name/Name.scss
@@ -33,7 +33,7 @@
 }
 
 .creating_NavEl-Container:hover {
-  //TODO clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 65%);;
+  //TODO clip-path: polygon(0 0, 100% 0%, 100% 85%, 0% 65%);
 
   clip-path: polygon(0 0, 100% 0%, 100% 95%, 0% 75%);
 }
