--- a/src/components/Characters/Characters.scss
+++ b/src/components/Characters/Characters.scss
@@ -9,6 +9,9 @@ body {
 
 .charactersOuterContainer {
   display: flex;
+  flex-direction: column;
+
+  align-items: center;
   height: 100vh;
   width: 100vw;
   background-color: #19191a;
@@ -117,49 +120,39 @@ body {
 }
 
 .AngelContainer {
-  top: 87vh;
-  position: absolute;
+  position: relative;
   overflow: hidden;
-  width: 200vw;
+  width: 100vw;
   height: 50vh;
 
-  background: #b92020;
-  transform: skew(0, -20deg);
+  background-color: #b92020;
+  clip-path: polygon(100% 25%, 25% 100%, 100% 100%);
 }
 
 .Angel {
-  display: flex;
-  justify-content: center;
-  transition: 0.5s;
-  opacity: 0;
-  position: relative;
-  top: 16.5vh;
-  overflow: hidden;
-  width: 200vw;
-  height: 0vh;
+  transition: 0.5s ease-in-out;
+  opacity: 1;
+  width: 100%;
+  height: 100%;
   background-color: #19191a;
+  clip-path: polygon(100% 32%, 100% 32%, 70% 100%, 70% 100%);
 }
 
 .AngelContainer:hover .Angel {
-  top: 4vh;
   opacity: 1;
-  height: 25vh;
+  clip-path: polygon(100% 30%, 100% 100%, 100% 100%, 30% 100%);
 }
 
 .Angel_btn {
   border-radius: 30px 0 30px 0;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin: 0 2% 2% 0;
 
-  position: relative;
-  width: 15%;
-  height: 40%;
-  top: 10%;
-  left: 15%;
-
-  font-size: 40px;
+  font-weight: 600;
+  font-size: 60px;
   line-height: 75px;
   color: #e1e3e6;
 
@@ -216,6 +209,8 @@ body {
   }
 
   .Angel_btn {
+    top: 60%;
+
     font-size: 25px;
   }
 }
