--- a/src/components/Characters/Character/Creating/Navbar/Navbar.scss
+++ b/src/components/Characters/Character/Creating/Navbar/Navbar.scss
@@ -1,5 +1,5 @@
 .creating_Nav {
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);
+  // clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);
   width: 100%;
   height: 20%;
   background-image: linear-gradient(90deg, #b92020 -20%, #166372 120%);
