--- a/src/components/Characters/Character/Creating/Navbar/Navbar.scss
+++ b/src/components/Characters/Character/Creating/Navbar/Navbar.scss
@@ -1,7 +1,7 @@
 .creating_Nav {
   // clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);
   width: 100%;
-  height: 20%;
+  height: 15%;
   background-image: linear-gradient(90deg, #b92020 -20%, #166372 120%);
   justify-content: center;
   display: flex;
@@ -43,10 +43,11 @@
   height: 4px;
   width: 0%;
   left: 50%;
-  transition: 0.3s ease-in-out;
+  transition: none;
 }
 
 .creating_NavEl-Container:hover::after {
+  transition: 0.3s ease-in-out;
   width: 100%;
   left: 0%;
 }
@@ -62,24 +63,36 @@
   .creating_NavEl-Text-Container {
     transition: ease-in-out 0.5s;
 
-    display: block;
+    display: flex;
+    align-items: center;
 
     clip-path: circle(5% at 50% 50%);
-    background: #19191a;
+    background: #19191a69;
     border-radius: 20px;
 
     opacity: 1;
     width: 680px;
-    height: 10%;
+    height: 8%;
+  }
+
+  .creating_NavEl-Text {
+    transition: ease-in-out 0.5s;
+    clip-path: circle(5% at 50% 50%);
+
+    opacity: 0;
+
+    text-align: center;
+    font-size: 16px;
+    color: #c4c4c4;
+    cursor: pointer;
+    width: 100%;
   }
 
   .creating_NavEl-Text-Container:hover {
     clip-path: circle(75%);
-    background: #19191a;
 
     .creating_NavEl-Text {
       clip-path: circle(100%);
-
       opacity: 1;
     }
   }
@@ -90,25 +103,12 @@
   position: absolute;
   transition: none;
 
-  padding: 10px 10px 30px 10px;
-  top: 8%;
+  // padding: 10px 10px 30px 10px;
+  top: 6%;
   left: calc(50vw - 340px);
   opacity: 0;
 }
 
 .creating_NavEl-Text {
   width: 0;
-}
-
-.active .creating_NavEl-Text {
-  transition: ease-in-out 0.5s;
-  clip-path: circle(5% at 50% 50%);
-
-  opacity: 0;
-
-  text-align: center;
-  font-size: 16px;
-  color: #c4c4c4;
-  cursor: pointer;
-  width: 100%;
 }
