--- a/src/components/Characters/Character/Creating/Creating.scss
+++ b/src/components/Characters/Character/Creating/Creating.scss
@@ -1,7 +1,9 @@
+@import '/src/utilities/variables';
+
 .creating_joinOuter-Container {
   height: 100vh;
   width: 100%;
-  background-color: #19191a;
+  background-color: $background-color;
   justify-content: center;
   align-items: center;
 }
@@ -28,7 +30,7 @@
 .creating_inner {
   position: relative;
   height: 100vh;
-  background-color: #19191a;
+  background-color: $background-color;
   justify-content: center;
   align-items: center;
   z-index: 3;
