--- a/src/components/Characters/Character/Creating/Navbar/Navbar.scss
+++ b/src/components/Characters/Character/Creating/Navbar/Navbar.scss
@@ -1,5 +1,6 @@
+@import 'public/utilities/variables';
+
 .creating_Nav {
-  // clip-path: polygon(0 0, 100% 0, 100% 100%, 0 50%);
   width: 100%;
   height: 18%;
   background-image: linear-gradient(90deg, #b92020 -20%, #166372 120%);
@@ -27,14 +28,14 @@
   padding: 5px 20px 5px;
 
   font-size: 16px;
-  color: #e1e3e6;
+  color: $mainText-color;
   font-weight: 600;
   text-transform: uppercase;
   cursor: pointer;
 }
 
 .creating_NavEl-Container:after {
-  background-color: #19191a;
+  background-color: $background-color;
   border-radius: 10px;
   margin-top: 1%;
   display: block;
@@ -120,6 +121,6 @@
   right: 10px;
 
   .cls-1 {
-    fill: #19191a;
+    fill: $background-color;
   }
 }
