--- a/src/components/Characters/Characters.scss
+++ b/src/components/Characters/Characters.scss
@@ -1,10 +1,8 @@
+@import 'public/utilities/variables';
+
 html,
 body {
   overflow: hidden;
-}
-
-#root {
-  height: 100vh;
 }
 
 .charactersOuterContainer {
@@ -14,7 +12,7 @@ body {
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background-color: #19191a;
+  background-color: $background-color;
   justify-content: center;
 }
 
@@ -50,7 +48,7 @@ body {
 
   font-size: 0px;
   text-align: center;
-  color: #e1e3e6;
+  color: $mainText-color;
 
   cursor: pointer;
 }
@@ -95,7 +93,7 @@ body {
   font-size: calc((100vw - 480px) / (1280 - 480) * (24 - 16) + 30px);
   text-align: center;
   line-height: 75px;
-  color: #e1e3e6;
+  color: $mainText-color;
 
   cursor: pointer;
 }
