--- a/src/components/LogIn_SignUp/LogIn_SignUp__Frames.scss
+++ b/src/components/LogIn_SignUp/LogIn_SignUp__Frames.scss
@@ -1,3 +1,5 @@
+@import 'public/utilities/variables';
+
 html,
 body {
   font-family: 'Roboto', sans-serif;
@@ -19,7 +21,7 @@ body {
   justify-content: center;
   height: 100vh;
   align-items: center;
-  background-color: #19191a;
+  background-color: $background-color;
 }
 
 .joinInnerContainer {
