--- a/src/components/LogIn_SignUp/LogIn_SignUp__Nav.scss
+++ b/src/components/LogIn_SignUp/LogIn_SignUp__Nav.scss
@@ -33,7 +33,7 @@
   opacity: 1;
 
   padding-bottom: 2px;
-  color: $mainText-color;
+  color: $gray_100;
   border-bottom: 4px solid #ffffff;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
@@ -51,7 +51,7 @@
   opacity: 1;
 
   padding-bottom: 2px;
-  color: $mainText-color;
+  color: $gray_100;
   border-bottom: 4px solid #ffffff;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
