--- a/public/utilities/_variables.scss
+++ b/public/utilities/_variables.scss
@@ -1,2 +1,122 @@
-$background-color: #19191a;
-$mainText-color: #e1e3e6;
+//*Background
+$gray_900: #19191a;
+//*Primary text
+$gray_100: #e1e3e6;
+
+$clear: #00000000;
+//*Main red
+$red: #b92020;
+$red_alpha50: #b92020e0;
+$red_light: #dc5454;
+$red_dark: #780a0a;
+
+//*Main blue
+$blue: #166372;
+$blue_alpha50: #166372ec;
+$blue_light: #49a7b8;
+$blue_dark: #073f4a;
+
+$red_error: #eb4250;
+$red_nice: #ff3347;
+$turquoise: #63b9ba;
+$violet: #792ec0;
+
+$gray_20: #f9f9f9;
+$gray_200: #c4c8cc;
+$gray_300: #aaaeb3;
+$gray_40: #f2f3f5;
+$gray_400: #909499;
+$gray_450: #7f8285;
+$gray_50: #ebedf0;
+$gray_500: #76787a;
+$gray_600: #5d5f61;
+$gray_700: #454647;
+$gray_750: #363738;
+$gray_800: #2c2d2e;
+$gray_850: #232324;
+$gray_950: #141414;
+$gray_1000: #0a0a0a;
+
+$azure_100_muted: #67a5eb;
+$azure_300: #3f8ae0;
+$azure_350: #2975cc;
+$azure_A100: #2787f5;
+$azure_A400: #4986cc;
+$black: #000000;
+$black_alpha05: #0d000000;
+$black_alpha8: #14000000;
+$black_alpha12: #1f000000;
+$black_alpha15: #26000000;
+$black_alpha16: #28000000;
+$black_alpha20: #4d000000;
+$black_alpha24: #3d000000;
+$black_alpha35: #59000000;
+$black_alpha6: #0f000000;
+$black_alpha60: #99000000;
+$black_alpha75: #bf000000;
+$black_blue10: #000c1a;
+$black_blue24: #001c3d;
+$black_blue24_alpha8: #14001c3d;
+$black_blue24_alpha24: #3d001c3d;
+$black_blue30_alpha66: #a800244d;
+$black_blue45_alpha10: #1a003973;
+$blue_200: #5c9ce6;
+$blue_200_muted: #74a2d6;
+$blue_300: #528bcc;
+$blue_400: #5181b8;
+$blue_600: #45678f;
+$blue_A300: #4772a6;
+$blue_A400: #346cad;
+$blue_A500: #3c6a9e;
+$blue_A800: #28436e;
+$blue_facebook: #4367a3;
+$blue_overlight_1_alpha32: #52add3ff;
+$blue_overlight_2_alpha80: #ccc2deff;
+$blue_overlight_3: #92b2d6;
+$brown_gold: #9e8f72;
+$brown_light: #c2b79f;
+$charcoal: #384452;
+$gold_200: #f4e7c3;
+$gold_250: #e3d3ac;
+$gold_300: #d1c097;
+$gold_400: #ab9871;
+$gold_500: #857250;
+
+$gray_A150: #d7d8d9;
+$gray_A40: #f5f5f5;
+$gray_A970: #070708;
+$gray_alpha: #b3d7dbe0;
+$green: #4bb34b;
+$light_gray_2: #a9b0b8;
+$mint_100: #d4fde8;
+$mint_200: #aee6c9;
+$mint_400: #6d8f7e;
+$mint_500: #567867;
+$mint_A1_alpha12: #1f006732;
+$orange: #ffa000;
+$orange_fire: #f05c44;
+$pink: #e6457a;
+$pink_alpha: #2e1e000c;
+$pink_light: #faebeb;
+
+$sky_300: #71aaeb;
+$steel_gray_150: #b8c1cc;
+$steel_gray_200: #aeb7c2;
+$steel_gray_250: #a3adb8;
+$steel_gray_300: #99a2ad;
+$steel_gray_350: #9099a3;
+$steel_gray_400: #818c99;
+$steel_gray_500: #6d7885;
+$violet_dark: #1f1b2c;
+$violet_light: #a393f5;
+$violet_muted: #4b4d61;
+$white: #ffffff;
+$white_alpha8: #14ffffff;
+$white_alpha12: #1fffffff;
+$white_alpha15: #26ffffff;
+$white_alpha20: #4dffffff;
+$white_alpha60: #99ffffff;
+$white_blue20: #cce4ff;
+$white_blue32: #add3ff;
+$yellow: #ffc107;
+$yellow_light: #ffd54f;
