--- a/src/components/Characters/Character/Character.scss
+++ b/src/components/Characters/Character/Character.scss
@@ -1,3 +1,5 @@
+@import 'public/utilities/variables';
+
 .Character_ul {
   padding: 0;
   margin: 0;
@@ -11,7 +13,7 @@
 }
 
 .Character_ul .Character_li {
-  box-shadow: 0 0 0 rgb(163, 40, 40);
+  box-shadow: 0 0 0 $red;
 
   transition: 0.4s ease;
 
@@ -22,18 +24,18 @@
 }
 
 .Character_ul .Character_li:hover {
-  box-shadow: 0 5px 15px rgb(163, 40, 40);
+  box-shadow: 0 5px 15px $red;
 }
 
 .Character_ul .Character_li:active {
-  box-shadow: 0 7px 25px rgb(255, 0, 0);
+  box-shadow: 0 7px 25px $red_nice;
 }
 
 .Character {
-  color: #1b1b1b;
-  background-color: #c4c4c4;
+  color: $gray_850;
+  background-color: $gray_200;
 
-  box-shadow: 0 0 0 rgb(163, 40, 40);
+  box-shadow: 0 0 0 $gray_700;
 
   width: 80%;
 
@@ -42,13 +44,12 @@
   font-size: 30px;
   outline: 0;
   padding: 15px 20px;
-  border: 1px solid #ccc;
   border-radius: 0 15px 0 15px;
   cursor: pointer;
 }
 
 .Character:hover {
-  box-shadow: 5px 5px 5px rgb(163, 40, 40);
+  box-shadow: 5px 5px 10px $gray_600;
 
   background-color: #cccccc;
 }
@@ -61,4 +62,7 @@
 
 .character_image {
   height: 100%;
+  .cls-1 {
+    fill: $red;
+  }
 }
