--- a/src/components/Chat/Join/Join.scss
+++ b/src/components/Chat/Join/Join.scss
@@ -17,7 +17,7 @@ body {
   text-align: center;
   height: 100vh;
   align-items: center;
-  background-color: $background-color;
+  background-color: $gray_900;
 }
 
 .joinInnerContainer {
