--- a/src/components/Characters/Character/Character.scss
+++ b/src/components/Characters/Character/Character.scss
@@ -2,10 +2,14 @@
 
 .Character_ul {
   padding: 0;
+  padding: 0 0 15px 0;
+
   margin: 0;
-  margin-bottom: 40px;
+  margin-bottom: 25px;
   display: flex;
   align-items: center;
+
+  overflow: hidden;
 }
 
 .Character_ul li {
@@ -31,27 +35,107 @@
   box-shadow: 0 7px 25px $red_nice;
 }
 
-.Character {
-  color: $gray_850;
-  background-color: $gray_200;
-
-  box-shadow: 0 0 0 $gray_700;
-
+.Character_li-Container {
+  position: relative;
   width: 80%;
+}
 
-  transition: 0.4s ease;
+.Character {
+  transition: 0.8s ease-in-out;
+  transition-delay: 0s;
+
+  position: relative;
+
+  clip-path: polygon(
+    0% 0%,
+    100% 0%,
+    100% 100%,
+    0 100%,
+    0 0,
+    100% 0,
+    100% 100%,
+    0 100%
+  );
+
+  height: 58px;
+
+  padding-left: 20px;
+  background: $gray_300;
+  border-radius: 0 20px 0 20px;
+
+  font-weight: 400;
 
   font-size: 30px;
-  outline: 0;
-  padding: 15px 20px;
-  border-radius: 0 15px 0 15px;
+  color: $gray_950;
+  line-height: 58px;
+
   cursor: pointer;
 }
 
-.Character:hover {
-  box-shadow: 5px 5px 10px $gray_600;
+.Character2 {
+  transition: 0.6s ease-in-out;
+  transition-delay: 0s;
 
-  background-color: #cccccc;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  background-color: #aaaeb381;
+  padding-left: 15px;
+
+  height: 58px;
+
+  padding-left: 20px;
+  border-radius: 0 20px 0 20px;
+
+  font-weight: 400;
+
+  font-size: 30px;
+  line-height: 58px;
+
+  cursor: pointer;
+
+  color: $gray_100;
+}
+
+.Character::after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 50%;
+  margin-top: -2px;
+  left: 100%;
+  width: 100%;
+  opacity: 1;
+  height: 4px;
+  background-color: $gray_600;
+  transition: none;
+}
+
+.Character_li-Container:hover {
+  .Character::after {
+    opacity: 0;
+    left: 0%;
+    transition: left 0.3s, opacity 0.9s cubic-bezier(1, 0, 1, 1);
+  }
+  .Character {
+    transition-delay: 0.1s;
+    clip-path: polygon(
+      0% 0%,
+      100% 0%,
+      100% 100%,
+      0% 100%,
+      0 100%,
+      100% 100%,
+      100% 0,
+      0 0
+    );
+  }
+
+  .Character2 {
+    transition-delay: 0.5s;
+
+    transform: translateX(5px);
+  }
 }
 
 @media (max-width: 750px) {
