--- a/src/components/Characters/Character/Creating/Creating.scss
+++ b/src/components/Characters/Character/Creating/Creating.scss
@@ -7,11 +7,12 @@
 
   height: 100vh;
   width: 100%;
-  // background-color: $gray_900;
+
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  background-blend-mode: overlay, color, hard-light;
 
   justify-content: center;
   align-items: center;
@@ -44,7 +45,6 @@
 
 .creating_inner {
   position: relative;
-  // background-color: $gray_900;
 
   justify-content: center;
   align-items: center;
