--- a/src/components/Characters/Character/Creating/Creating.scss
+++ b/src/components/Characters/Character/Creating/Creating.scss
@@ -11,7 +11,7 @@
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  // background-size: 100% 100%;
   background-blend-mode: overlay, color, hard-light;
 
   justify-content: center;
@@ -51,4 +51,10 @@
   z-index: 3;
   max-width: 680px;
   margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+  .creating_joinOuter-Container {
+    background-color: $gray_900;
+  }
 }
