--- a/src/components/Characters/Character/Creating/Navbar/Navbar.scss
+++ b/src/components/Characters/Character/Creating/Navbar/Navbar.scss
@@ -4,34 +4,53 @@
   user-select: none;
   position: relative;
   width: 100%;
-  height: 18vh;
 
-  justify-content: center;
   display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
 
+  overflow: hidden;
   z-index: 3;
 }
 
 .creating_Nav-Container {
-  margin: auto;
+  margin-top: 2%;
   display: flex;
   justify-content: center;
+  font-size: 16px;
+  // width: 100%;
+
+  overflow: hidden;
 }
 
 .creating_NavEl-Container {
   transition: 0.5s ease-in-out;
 
-  position: static;
-
-  margin-top: 2.5%;
   padding: 0 10px;
 }
 
 .creating_NavEl {
-  text-decoration: none;
-  padding: 5px 20px 5px;
-
+  // display: flex;
+  // justify-content: center;
   font-size: 16px;
+  // width: 50px;
+  // padding: 5px 10px 5px;
+  text-decoration: none;
+
+  color: $gray_100;
+  font-weight: 600;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.creating_NavElAct {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  // width: 50px;
+  // padding: 5px 10px 5px;
+  text-decoration: none;
+
   color: $gray_100;
   font-weight: 600;
   text-transform: uppercase;
@@ -64,62 +83,6 @@
   height: 3px;
 }
 
-.creating_NavEl-Container.active {
-  .creating_NavEl-Text-Container {
-    transition: ease-in-out 0.5s;
-
-    display: flex;
-    align-items: center;
-
-    clip-path: circle(5% at 50% 50%);
-    background: #aaaeb381;
-    border-radius: 20px;
-
-    opacity: 1;
-    width: 680px;
-    height: 11vh;
-  }
-
-  .creating_NavEl-Text {
-    transition: ease-in-out 0.5s;
-    clip-path: circle(5% at 50% 50%);
-
-    opacity: 0;
-
-    text-align: center;
-    font-size: 16px;
-    color: $gray_100;
-    cursor: pointer;
-    width: 100%;
-
-    user-select: text;
-  }
-
-  .creating_NavEl-Text-Container:hover {
-    clip-path: circle(75%);
-    background: #19191ac4;
-
-    .creating_NavEl-Text {
-      clip-path: circle(100%);
-      opacity: 1;
-    }
-  }
-}
-
-.creating_NavEl-Text-Container {
-  display: none;
-  position: absolute;
-  transition: none;
-
-  top: 30%;
-  left: calc(50vw - 340px);
-  opacity: 0;
-}
-
-.creating_NavEl-Text {
-  width: 0;
-}
-
 .crating_Nav-backImg {
   position: absolute;
   width: 25px;
@@ -130,4 +93,44 @@
   .cls-1 {
     fill: $gray_900;
   }
+}
+
+.creating_Nav-list {
+  position: relative;
+
+  overflow-x: hidden;
+  margin: auto;
+  margin-top: 10px;
+  width: 80vw;
+
+  .slick-track {
+    display: flex;
+    .slick-slide {
+      // padding: 0 50px;
+    }
+  }
+}
+
+.selected {
+  font-size: 28px;
+
+  text-decoration: none;
+
+  color: $gray_100;
+  font-weight: 600;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.active {
+  font-size: 16px;
+
+  text-decoration: none;
+
+  color: $gray_100;
+  font-weight: 600;
+  text-transform: uppercase;
+  cursor: pointer;
+
+  text-align: center;
 }
