--- a/src/components/Characters/Character/Creating/Race/RacesList/Races.scss
+++ b/src/components/Characters/Character/Creating/Race/RacesList/Races.scss
@@ -36,7 +36,7 @@ $fontsize: 30px;
     0 100%
   );
 
-  height: 58px;
+  height: 2.3em;
 
   padding-left: 20px;
   background: $gray_300;
@@ -45,7 +45,7 @@ $fontsize: 30px;
   font-weight: 400;
 
   color: $gray_950;
-  line-height: 58px;
+  line-height: 2.3em;
 
   cursor: pointer;
 }
@@ -59,12 +59,12 @@ $fontsize: 30px;
   top: 0;
   background-color: #aaaeb381;
   padding-left: 15px;
-  height: 58px;
+  height: 2.3em;
   padding-left: 20px;
   border-radius: 0 20px 0 20px;
 
   font-weight: 400;
-  line-height: 58px;
+  line-height: 2.3em;
   cursor: pointer;
   color: $gray_100;
 }
@@ -118,12 +118,12 @@ $fontsize: 30px;
 
 .creating_Race-RaceEl_race {
   font-weight: 400;
-  line-height: 42px;
+  line-height: 1.6em;
 }
 
 .creating_Race-RaceEl_subrace {
   font-size: 14px;
-  line-height: 14px;
+  line-height: 0.6em;
 }
 
 .creating_Race-RaceEl {
