--- a/src/components/Characters/Character/Creating/Race/RacesList/dropDown.scss
+++ b/src/components/Characters/Character/Creating/Race/RacesList/dropDown.scss
@@ -32,7 +32,7 @@
     100% 100%,
     0 100%
   );
-  height: 58px;
+  height: 2.3em;
   padding-left: 20px;
   background: $gray_300;
   border-radius: 0 20px 0 20px;
@@ -48,14 +48,14 @@
   background-color: #aaaeb381;
   padding-left: 15px;
 
-  height: 58px;
+  height: 2.3em;
 
   padding-left: 20px;
   border-radius: 0 20px 0 20px;
 
   font-weight: 400;
 
-  line-height: 58px;
+  line-height: 2.3em;
 
   cursor: pointer;
 
@@ -99,13 +99,13 @@
 }
 
 .creating_Race-RaceEl_Dropdown_race {
+  line-height: 0.6em;
   font-weight: 400;
-  line-height: 28px;
 }
 
 .creating_Race-RaceEl_Dropdown_subrace {
   font-size: 14px;
-  line-height: 22px;
+  line-height: 1.9em;
 }
 
 .creating_Race-RaceEl_Dropdown {
