--- a/src/components/Characters/Character/Creating/Race/RacesList/media.scss
+++ b/src/components/Characters/Character/Creating/Race/RacesList/media.scss
@@ -1,5 +1,3 @@
-$fontsize_Sml: 24px;
-
 @media (max-width: 768px) {
   .creating_Race-RaceEl-Container {
     width: 100%;
@@ -7,7 +5,10 @@ $fontsize_Sml: 24px;
 
   .creating_Race-RaceEl_Dropdown-Container {
     width: 100%;
-
     margin-left: 20px;
+  }
+
+  .creating_Race-container {
+    font-size: 22px;
   }
 }
