--- a/src/components/Characters/Character/Creating/Navbar/Navbar.scss
+++ b/src/components/Characters/Character/Creating/Navbar/Navbar.scss
@@ -1,16 +1,6 @@
 @import 'public/utilities/variables';
 
 .creating_Nav {
-  user-select: none;
-  position: relative;
-  width: 100%;
-
-  display: flex;
-  justify-content: flex-start;
-  flex-direction: column;
-
-  overflow: hidden;
-  z-index: 3;
 }
 
 .creating_Nav-Container {
@@ -96,33 +86,30 @@
 }
 
 .creating_Nav-list {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+
   position: relative;
 
   overflow-x: hidden;
   margin: auto;
   margin-top: 10px;
-  width: 80vw;
 
-  .slick-track {
-    display: flex;
-    .slick-slide {
-      // padding: 0 50px;
-    }
-  }
+  width: 90vw;
 }
 
-.selected {
-  font-size: 28px;
+.creating_Nav-views {
+  padding: 0 34.5%;
+}
 
-  text-decoration: none;
-
-  color: $gray_100;
-  font-weight: 600;
-  text-transform: uppercase;
-  cursor: pointer;
+.creating_Nav-view {
+  display: flex;
+  justify-content: center;
 }
 
 .active {
+  padding: 0 30px;
   font-size: 16px;
 
   text-decoration: none;
@@ -131,6 +118,21 @@
   font-weight: 600;
   text-transform: uppercase;
   cursor: pointer;
+}
 
-  text-align: center;
+.active:hover {
+}
+
+.selected:after {
+  border-radius: 10px;
+  margin-top: 1%;
+  display: block;
+  position: relative;
+  content: '';
+  transition: none;
+
+  background-color: $gray_100;
+  width: 120%;
+  left: -10%;
+  height: 3px;
 }
