FIX Adaptive Navbar

--- a/src/components/Characters/Character/Creating/Navbar/media.scss
+++ b/src/components/Characters/Character/Creating/Navbar/media.scss
@@ -2,4 +2,11 @@
   .creating_Nav-Container {
     font-size: 14px;
   }
+
+  .creating_Nav-views {
+    padding: 0 30.5%;
+  }
+  active {
+    font-size: 12px;
+  }
 }
