--- a/src/components/Characters/Character/Creating/Navbar/media.scss
+++ b/src/components/Characters/Character/Creating/Navbar/media.scss
@@ -1,12 +1,9 @@
 @media (max-width: 768px) {
-  .creating_Nav-Container {
-    font-size: 14px;
+  .creating_Nav-list {
+    right: 10px;
   }
 
-  .creating_Nav-views {
-    padding: 0 33.2%;
-  }
   .active {
-    font-size: 11.5px;
+    font-size: 11px;
   }
 }
