--- a/src/components/Characters/Character/Creating/Creating.scss
+++ b/src/components/Characters/Character/Creating/Creating.scss
@@ -3,6 +3,7 @@
 .creating_joinOuter-Container {
   position: relative;
   overflow-y: auto;
+  overflow-x: hidden;
   z-index: 4;
 
   height: 100vh;
@@ -26,21 +27,23 @@
   height: 100%;
 }
 
-.creating_joinOuter-Container::-webkit-scrollbar-track {
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0);
-}
+@media (min-width: 1000px) {
+  .creating_joinOuter-Container::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0);
+  }
 
-.creating_joinOuter-Container::-webkit-scrollbar {
-  background-color: #454547af;
-  border-radius: 10px;
-  width: 12px;
-}
+  .creating_joinOuter-Container::-webkit-scrollbar {
+    background-color: #454547af;
+    border-radius: 10px;
+    width: 12px;
+  }
 
-.creating_joinOuter-Container::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #555;
+  .creating_joinOuter-Container::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #555;
+  }
 }
 
 .creating_inner {
