--- a/src/components/Characters/Character/Creating/Navbar/media.scss
+++ b/src/components/Characters/Character/Creating/Navbar/media.scss
@@ -3,7 +3,9 @@
     right: 10px;
   }
 
-  .active {
-    font-size: 11px;
+  .creating_Nav-view {
+    .active {
+      font-size: 12px;
+    }
   }
 }
