--- a/src/components/Characters/Character/Creating/Navbar/Navbar.scss
+++ b/src/components/Characters/Character/Creating/Navbar/Navbar.scss
@@ -2,13 +2,37 @@
 
 .crating_Nav-backImg {
   position: absolute;
-  width: 25px;
+  width: 23px;
 
-  top: 10px;
-  right: 10px;
+  top: 4px;
+  right: -2px;
 
   .cls-1 {
-    fill: $gray_900;
+    fill: black;
+  }
+  .cls-2 {
+    fill: white;
+  }
+  .cls-3 {
+    fill: white;
+  }
+}
+
+.crating_Nav-backImg_big {
+  position: fixed;
+  width: 30px;
+
+  top: 5px;
+  right: 25px;
+
+  .cls-1 {
+    fill: black;
+  }
+  .cls-2 {
+    fill: white;
+  }
+  .cls-3 {
+    fill: white;
   }
 }
 
@@ -21,43 +45,47 @@
 
   overflow-x: hidden;
   margin: auto;
-  margin-top: 10px;
+  padding-top: 15px;
 
-  width: 100vw;
+  height: 42px;
+
+  width: 100%;
 }
 
 .creating_Nav-views {
-  padding: 0 36%;
+  margin-right: 1.5px;
+  padding: 0 38% 0 30%;
 }
 
 .creating_Nav-view {
   display: flex;
   justify-content: center;
   overflow: hidden;
-}
 
-.active {
-  padding: 0 30px;
-  font-size: 16px;
+  .active {
+    padding: 0 2%;
+    margin: 0 20px;
+    font-size: 16px;
 
-  text-decoration: none;
+    text-decoration: none;
 
-  color: $gray_100;
-  font-weight: 600;
-  text-transform: uppercase;
-  cursor: pointer;
-}
+    color: $gray_100;
+    font-weight: 600;
+    text-transform: uppercase;
+    cursor: pointer;
+  }
 
-.selected:after {
-  border-radius: 10px;
-  margin-top: 1%;
-  display: block;
-  position: relative;
-  content: '';
-  transition: none;
+  .selected:after {
+    border-radius: 10px;
+    margin-top: 1%;
+    display: block;
+    position: relative;
+    content: '';
+    transition: none;
 
-  background-color: $gray_100;
-  width: 100%;
-  left: 0%;
-  height: 3px;
+    background-color: $gray_100;
+    width: 100%;
+    left: 0%;
+    height: 3px;
+  }
 }
