--- a/src/components/LogIn_SignUp/LogIn_SignUp__Frames.scss
+++ b/src/components/LogIn_SignUp/LogIn_SignUp__Frames.scss
@@ -27,8 +27,8 @@ body {
 
 .joinInnerContainer {
   padding: 10% 5% 0 5%;
-  height: 100vh;
-  overflow: hidden;
+  // height: 100vh;
+  overflow-x: hidden;
   align-items: center;
 }
 
